[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/shoe.png" type="Texture" id=1]
[ext_resource path="res://Sprites/shadow.png" type="Texture" id=2]
[ext_resource path="res://Shoe.gd" type="Script" id=3]
[ext_resource path="res://soundfx/stamp.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.9825
height = 219.314

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.3601
height = 223.88

[node name="Shoe" type="StaticBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShoeSprite" type="Sprite" parent="."]
position = Vector2( 4.10107, -84.0724 )
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 4.10107, -84.0724 )
z_index = -1
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 4.10107, -84.0724 )

[node name="Detection" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.56, 111.577 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="DownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 1.29858, 27.5526 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="SoundFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="TweenUP" type="Tween" parent="."]

[node name="UpTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DownTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="UpTimer" to="." method="_on_UpTimer_timeout"]
